derive_builder/tests/compile-fail/builder_field_custom.stderr
error: Unexpected meta-item format `#[builder(default)] and #[builder(custom(build="..."))] cannot be used together`
 --> tests/compile-fail/builder_field_custom.rs:6:25
  |
6 |     #[builder(default = "88", custom(type = "usize", build = "self.ipsum.unwrap_or_else(42) + 1"))]
  |                         ^^^^

error: Unexpected meta-item format `#[builder(default)] and #[builder(custom(build="..."))] cannot be used together`
 --> tests/compile-fail/builder_field_custom.rs:6:62
  |
6 |     #[builder(default = "88", custom(type = "usize", build = "self.ipsum.unwrap_or_else(42) + 1"))]
  |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
